--- a/_Rmd/ST_558_Project_2.Rmd
+++ b/_Rmd/ST_558_Project_2.Rmd
@@ -2,7 +2,7 @@
 title: "Project 2"
 author: "Kristina Golden and Demetrios Samaras"
 date: "2023-07-02"
-output: html_document
+output: github_document
 params: 
   DataChannel: "Lifestyle"
 ---
@@ -93,8 +93,7 @@ In this report we will be looking at the `r params$DataChannel` data channel of 
 
 setwd("C:/Documents/Github/ST_558_Project_2")
 #setwd("C:/Users/Demetri/Documents/NCSU_masters/ST558/Repos/GitHub/ST_558_Project_2")
-##Delete## I learned this trick while working my summer internship. When you are collaborating with people, put your project in your documents in a folder named Github. Everyone collaborating does the same. Then we have the same working directory. I just commented your working directory out so it would run the code for me, while you're working, fill free to comment mine out and uncomment yours. 
-## Oh dang that is a good idea haha i will definitly do that next time 
+ 
 
 online <- read.csv('OnlineNewsPopularity.csv')
 colnames(online) <- c('url', 'days', 'n.Title', 'n.Content', 'Rate.Unique', 
@@ -223,6 +222,7 @@ correlation_graph(data_channel_train)
 Because the correlation table above is large, it can be difficult to read. The correlation graph above gives a visual summary of the table. Using the legend, we are able to see the correlations between variables, how strong the correlation is, and in what direction.
 
 ```{r scatterplot}
+## Delete## should this be data_channel_train not shares high? 
 ggplot(shareshigh, aes(x=Rate.Pos, y=Rate.Neg,
                        color=Days_of_Week)) +
     geom_point(size=2)
@@ -231,6 +231,10 @@ ggplot(shareshigh, aes(x=Rate.Pos, y=Rate.Neg,
 Once seeing the correlation table and graph, it is possible to graph two variables on a scatterplot. This provides a visual of the linear relationship. A scatterplot of two variables in the `params$DataChannel` dataset has been created above.
 
 ```{r contingency tables }
+
+## DELETe## should i delete these and do differnt contigency tables since you did a better version of this with every day of the week? 
+
+
 ## mean of shares 
 mean(data_channel_train$shares)
 
@@ -318,7 +322,7 @@ a+geom_histogram(color= "red", fill="blue")+ ggtitle("Shares histogram")
 
 ```
 
-Above we can see the frequency distribution of the `r params$DataChannel` data channel. We should always see a long tail to the right because a small number of articles will get a very high number of shares. But looking at by looking at the distribution we can say how many shares most of these articles got.
+Above we can see the frequency distribution of shares of the `r params$DataChannel` data channel. We should always see a long tail to the right because a small number of articles will get a very high number of shares. But looking at by looking at the distribution we can say how many shares most of these articles got.
 
 ```{r col graph }
 ## creates plotting object with number of words in title and shares
@@ -388,7 +392,6 @@ linear_1_RMSE<- postResample(linear_model_1_pred, obs = data_channel_test$shares
 ### Linear regression 2
 
 ```{r Linear regression 2 }
-## Delete ## i think this looks good! smart things to cut out, i will try to improve mine. ## 
 
 #Removed rate.Nonstop because it was only 1 and removed the days of the week.
 linear_model_2 <- train( shares ~. - Rate.Nonstop - Mon
@@ -431,11 +434,7 @@ rfRMSE<- postResample(rfFit_pred, obs =
 
 ##Delete## I will try again to add a tuneGrid to the random forest tomorrow later today
 
-## Delete## i think it looks good! i will need to rewatch the lecture and try to dig in some more cause im really lost on these ensamble tree based models. i think you chose some good ones to remove.  the only thing is in the project it says "Both models should be chosen using cross-validation" for random forest and boosted tree, so i think the random forest does need cv unless im missing something. Im still trying to figure out what is wrong with my cross validation and a way to take the tuning parameters based on each data_channel_is during the automation process. I think we are close though! 
 
-## Delete## I rewatched the lecture for model fitting using the caret package. I made the appropriate modifications. I tried to use the tuneGrid but the code was trying to run for over 5 minutes and it never went through, so I used the suggested mtry for regression from the random forest lecture.
-
-## delete## So i went through the random forrest stuff again while doing the hw that was due today and my random forrest also took forever to run with the tune grid. i think it just depends on the size of the expand.grid that you give it. we should keep that in mind for when we are doing the final render of the project because it may take forever to render all 6 lol
 
 ```
 
